@@ -18,4 +18,5 @@ Matt Kraai		<kraai@alumni.carnegiemellon.edu>
 
 Koenraad Heijlen	<vipie@ulyssis.org>
  - csv import filter
+ - palmcsv export filter
  - fixes
