@@ -1,5 +1,6 @@
 2002-xx-xx
  - options.c rewritten (new mutt style rc file support)
+ - palmcsv export filter (Koenraad Heijlen)
  - added a spec file for rpm support
  - bugfixes
 
